crates/nuo-tui/src/snapshots/nuo_tui__snapshot_tests__execute_command_expanded_renders_markers_and_output.snap
---
source: apps/terminal/crates/mutx/src/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
- Run cargo
  $ cargo test
  running 3 tests
  .
  .
  .
  test result: ok. 3 passed
  STDOUT:
  built ok
  Exit 0

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
3: B80
4: B80
5: B80
6: B80
7: B80
8: B80
9: B80
